<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_trip_create"
            android:icon="@drawable/baseline_location_on_24"
            android:title="@string/menu_new_trip" />
        <item
            android:id="@+id/nav_trip_index"
            android:icon="@drawable/baseline_directions_car_24"
            android:title="@string/menu_trips" />

        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/baseline_account_balance_wallet_24"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/baseline_discount_24"
            android:title="@string/menu_promotions" />
        <item
            android:id="@+id/nav_profile_view"
            android:icon="@drawable/baseline_person_24_2"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/baseline_contact_support_24"
            android:title="@string/menu_support" />
    </group>
</menu>