<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profiles.profileView.ProfileViewFragment"
    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/profile_view_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background">

                <ImageView
                    android:id="@+id/profile_view_iv_profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/app_profile_image_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_view_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_view_iv_profile_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/profile_view_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Email-->
        <ImageView
            android:id="@+id/profile_view_iv_email_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_email_icon_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_relative_layout"
            app:srcCompat="@drawable/ic_profile_view_email_40dp" />

        <TextView
            android:id="@+id/profile_view_tv_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/profile_view_email_icon_title"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_email_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_relative_layout"/>

        <TextView
            android:id="@+id/profile_view_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text=""
            android:textColor="#000"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_email_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_tv_email_title"/>

        <Space
            android:id="@+id/profile_view_email_bottom_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_iv_email_icon"/>


        <!-- Phone-->
        <ImageView
            android:id="@+id/profile_view_iv_phone_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_phone_icon_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_email_bottom_space"
            app:srcCompat="@drawable/ic_profile_view_stay_primary_portrait_40dp" />

        <TextView
            android:id="@+id/profile_view_tv_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_view_phone_icon_title"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_phone_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_email_bottom_space" />

        <TextView
            android:id="@+id/profile_view_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="#000"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_email_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_tv_phone_title" />

        <Space
            android:id="@+id/profile_view_phone_bottom_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_iv_phone_icon" />

        <!-- Location-->
        <ImageView
            android:id="@+id/profile_view_iv_location_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_location_icon_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_phone_bottom_space"
            app:srcCompat="@drawable/ic_profile_view_place_40dp" />

        <TextView
            android:id="@+id/profile_view_tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_view_location_icon_title"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_location_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_phone_bottom_space" />

        <TextView
            android:id="@+id/profile_view_tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="#000"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_location_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_tv_location_title" />

        <Space
            android:id="@+id/profile_view_location_bottom_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_iv_location_icon" />


        <!-- Join date-->
        <ImageView
            android:id="@+id/profile_view_iv_join_date_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_date_icon_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_location_bottom_space"
            app:srcCompat="@drawable/ic_profile_view_date_range_40dp" />

        <TextView
            android:id="@+id/profile_view_tv_join_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_view_join_date_icon_title"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_join_date_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_location_bottom_space" />

        <TextView
            android:id="@+id/profile_view_tv_join_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="#000"
            app:layout_constraintStart_toEndOf="@+id/profile_view_iv_email_icon"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_tv_join_date_title" />

        <Space
            android:id="@+id/profile_view_join_date_bottom_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_iv_join_date_icon" />


        <!-- About-->


        <Button
            android:id="@+id/profile_view_edit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/button_bg_rounded_corners_blue_color"
            android:minHeight="38dp"
            android:text="@string/profile_view_edit_profile_btn_text"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_iv_join_date_icon" />


        <Button
            android:id="@+id/profile_view_change_password_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/button_bg_rounded_corners_blue_color"
            android:minHeight="38dp"
            android:text="@string/profile_view_change_password_btn_text"
            android:textColor="#ffffff"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_view_edit_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>